--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
  <div class="container">
- <h1>Staff Notifications</h1>
+ <h1>Notifications</h1>
  <!-- Alert Notification -->
  <div class="notification-card alert">
  <h3>Alert</h3>
